--- a/sec-7-chat/index.css
+++ b/sec-7-chat/index.css
@@ -11,7 +11,10 @@
 body {
     margin: 0;
 }
-/*Main layout of the site*/
+
+
+/* ---------------------- Main layout of the site ---------------------- */
+
 .main-container {
     display: grid;
     grid-template-columns: 25% 25% 48%;
@@ -35,6 +38,7 @@ body {
     min-height: 100vh;
     border-radius: 15px;
 }
+
 /*Responsiveness of page layout*/
 @media screen and (max-width:950px) {
     .main-container {
@@ -62,7 +66,9 @@ body {
     }
 }
 
+
 /*user profile*/
+
 .user-profile {
     display: flex;
     justify-content: center;
@@ -91,7 +97,9 @@ body {
     right: 25px;
     border: 2px solid #fff;
 }
+
 /*.name, .email, .option-icons*/
+
 .name, .email, .option-icons {
     display: flex;
     justify-content: center;
@@ -110,7 +118,9 @@ a {text-decoration: none;}
 .option-icons {
     padding-bottom: 25px;
 }
+
 /*media*/
+
 .media-files {
     margin-inline: 20px;
     border-top: 1px solid #ccc;
@@ -139,7 +149,9 @@ a {text-decoration: none;}
 .media-files h4 {
     text-align: center;
 }
+
 /*Groups*/
+
 .groups img {
     height: 40px;
     width: 40px;
@@ -165,7 +177,9 @@ a {text-decoration: none;}
     color: rebeccapurple;
     font-weight: 600;
 }
+
 /*Nav-search*/
+
 .nav-search {
     display: flex;
     justify-content: center;
@@ -202,7 +216,9 @@ button i {
     font-size: 15px;
     color: #4d4a4a;
 }
+
 /*Friends*/
+
 .friends {
     margin-inline: 20px;
     margin-top: 30px;
@@ -253,7 +269,9 @@ button i {
 .offline-color {
     background-color: red;
 }
+
 /*chat area*/
+
 .chats-side {
     display: flex;
     justify-content: space-between;
@@ -286,7 +304,9 @@ button i {
     border-radius: 50%;
     margin-right: 5px;
 }
+
 /*chat area*/
+
 .chat-area {
     margin-block: 50px 30px;
     padding-block: 15px;
@@ -335,6 +355,7 @@ button i {
     box-shadow: 2px 2px 10px grey;
     width: 280px;
 }
+
 /*customize scrollbar*/
 .chat-area::-webkit-scrollbar {
     width: 8px;
@@ -346,6 +367,7 @@ button i {
 .chat-area::-webkit-scrollbar-track {
     background-color: #fff;
 }
+
 /*search form 2*/
 form button.message {
     background: var(--icon-background);
@@ -357,6 +379,7 @@ button i.sending {
     display: flex;
     align-items: center;
 }
+
 /*Responsiveness*/
 @media screen and (max-width:500px) {
     .chats-side {
@@ -376,7 +399,9 @@ button i.sending {
         width: 250px;
     }
 }
-/*Footer*/
+
+
+/* ----------------------Footer ----------------------*/
 footer {
     background-color: white;
 }
